# trustedText

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  trustedText.py
app/: api.py  index.html
