[project]
name = "trustedtext"
version = "0.1.0"
description = "AI Text Detection using Neural Networks with Contrastive Learning"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.1",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.0",
    "torch>=2.10.0",
    "rich>=13.9.4",
    "inquirer>=3.4.0",
    "agno>=2.4.3",
    "openai>=2.15.0",
    "fastapi>=0.128.0",
    "uvicorn>=0.34.0",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
